--- a/Spring 2022/submissions_A1_S22/group10_793_4388205_NDH802-Assignment1-10.V1.Rmd
+++ b/Spring 2022/submissions_A1_S22/group10_793_4388205_NDH802-Assignment1-10.V1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "NDH802 - Assignment 1"
-author: "Group no. "
+author: "Group no. 10 "
 output: pdf_document
 ---
 
@@ -27,7 +27,7 @@ Set your working directory and fill in your group number. For example, if you ar
 
 ```{r}
 #setwd("")
-our_group <- 27
+our_group <- 10
 ```
 
 Run this code chunk to load data into your R Environment. The command will randomly select 1,000,000 rows of data from the original data set. Hereby each and every group should have a unique `df`. Accordingly, your results should be different from other groups' and you should not be comparing them.
@@ -75,23 +75,61 @@ set.seed(our_group); df <- inference_dataset[sample(1:nrow(inference_dataset),
 
 (a) Compute the `total.spend` of the customer (that includes `store.spend` and `online.spend`). Plot the histogram of `total.spend`. Imagine you will present this to your manager. Make it readable and self-explanatory (e.g., add the title for the chart and labels for the axes where needed). (1p) How do you explain the peak of the histogram, in general and in this context? (1p)
 
-    Answer:
+    **Answer**: The peak area of the histogram constitutes the spend of which the majority of customers are putting on both online and store items.
+
+    In general, the peaks show where the majority of responses or values are located at. For example, if the most students scored 10 on a test this will be the highest peak.
 
     ```{r}
-    hist()
+    hist(
+      df[,"total.spend"],
+      main = "Total Spend",
+      xlab = "Sum of Store and Online Spend",
+      ylab = "No. of customers",
+      col = "lightblue3"
+    )
     ```
 
 (b) Make a box plot for `total.spend` for 3 groups, customers whose main format is supermarket, convenience store and online. Refer to the code provided and modify it (1p). From this figure, would you conclude that online is the format that contributes the most to the `total.spend`? Why/why not? (1p)
 
+    **Answer:** Upon analyzing the boxplot we cannot draw the conclusion that the online format contributes the most to online spend. However, we can see the variability regarding spend in the diagram below. The boxplot does not show the quantity of these transactions, rather it shows what values, in term of spend, is usually executed by the customer. Even though it might seem that one format has an higher median spend, it does not account for the number of transactions.
+
+    Moreover, sometimes we would like to eliminate outliers but in the diagram below all entries are presented.
+
 ```{r,fig.height=6, fig.width=6}
-# boxplot(
-#   your_variable_of_interest ~ the_group,
-#   data = your_df,
-#   ylim = c(-10, 100) # adjust the ylim that better illustrates your data
-# )
+boxplot(
+  df[,"total.spend"] ~ main.format,
+  data = df,
+  ylim = c(10000, 350000),
+  main = "Total Spend per Format",
+  xlab = "Format",
+  ylab = "Spend",
+  col = "lightblue3"
+)
 ```
 
 (c) Compute the mean and variance of `distance.to.store` of the customers whose `main.format` is supermarket and of the customers whose `main.format` is convenient store (1p). Comment on the difference between the means of the two groups; and the difference between the variances of the two groups (1p).
+
+    **Answer:** When comparing the mean distance to store for supermarket and convenience store customers we can identify that the mean distance to store is 4,78 distance units for supermarket customer and 1,35 distance units for convenience store customers. Thus customers visiting the supermarket are driving longer distances to access greater assortment.
+
+    We identifed that the supermarket customers had a variability of 33,65 distance units whilst convenience store customers had a variability of 0,4. We can assume that the reasons correspond with the statement above.
+
+    ```{r}
+    #Supermarket:
+
+    mean(df[df$main.format == "Supermarket", "distance.to.store"],
+    na.rm = TRUE)
+
+    var(df[df$main.format == "Supermarket", "distance.to.store"],
+    na.rm = TRUE)
+
+    #Convinience store:
+
+    mean(df[df$main.format == "Convenience store", "distance.to.store"],
+    na.rm = TRUE)
+
+    var(df[df$main.format == "Convenience store", "distance.to.store"],
+    na.rm= TRUE)
+    ```
 
 ### Question 2. Probability theory
 
@@ -103,13 +141,76 @@ Consider the following events:
 
 (a) Compute $P(A)$ and $P(B)$. (1p)
 
+    ```{r}
+    #P(A) calculated below:
+
+    prop.table(table(df$store.trans != 0))
+    #Shows that every customer in the register has carried out an offline transaction thus making the probability 100%
+
+
+    #P(B) calculated below:
+
+    prop.table(table(df$online.trans != 0))
+    #The probability of one having made an online transaction is 96%
+
+    ```
+
 (b) What is the complement of $B$? Formally, define event $\bar{B}$ and compute $P(\bar{B})$. (1p)
+
+    ```{r}
+    #The complement of event B defines all outcomes that does not adhere to event B. In essence, we are looking for the outcomes/probabilities where the customers have not carried out an online transaction.
+
+    #The event can be calculated in the same way as above, where we look for the false value instead of the true. Alternatively, coherent to the formal formula we can take: 1 - probaility of P(B).
+
+    #The first method gives:
+    1 - 0.960125
+    # = 0,039875
+
+    #Alternatively
+    prop.table(table(df$online.trans != 0))
+    #Where we look at the false value = 0,039875
+
+    #Answer = 0,039875
+    ```
 
 (c) Compute $P(B \cap A)$ and $P(B \mid A)$. (1p)
 
+    ```{r}
+    #Computing P(B intersect A):
+    prop.table(table(df$store.trans !=0
+                     & df$online.trans !=0))
+
+    #Computing p(B given A)
+    #Calculating the intersect as above:
+    prop.table(table(df$store.trans !=0
+                     & df$online.trans !=0))
+    #=0,960125
+
+    #Calculting the probability of A:
+    prop.table(table(df$store.trans != 0))
+    #=1
+
+    0.960125 / 1
+    # Answer = 0,960125
+    ```
+
 (d) Are $A$ and $B$ independent events? Why/why not? (1p)
 
+    **Answer:**
+
+    If A and B are independent events then $P (A \cap B)$ = $P (A)$ \* $P (B)$. We know that $P (A \cap B)$ = 0,960125 and that $P (A)$ = 1 and that $P (B)$ = 0,960125.
+
+    Thus, multiplying $P (A)$ with $P (B)$ should give 0,960125. Utilizing the numbers above we can see that the formula holds true. This means that A and B are statistically independent.
+
 (e) Compare and explain (with formula) the similarities/differences among $P(B)$, $P(B \cap A)$ and $P(B \mid A)$ (2p).
+
+    **Answer:**
+
+    $P (B)$ is the probability that event B will happen in the sample space. We calculate $P (B)$ by dividing the number of favorable outcomes, regarding B by the entire sample space: $P (B) = \frac{N_B}{N}$. The probability will range from 0 to 1 where 1 represents 100% probability.
+
+    $P (B \cap A)$ showcases when an outcome is placed both within the probability of event A and B. In essence, we are looking for convergence when eg. an individual from Group A also conforms to Group B. When regarding a Venn diagram, the intersection is placed where P(A) intersects with P(B).
+
+    $P (B \mid A)$ shows the probability of B given that the outcome of A already occurred. We calculate this using the formula: $P(B \mid A)$ = $P (A \cap B)$ / $P (A)$ .
 
 \vfill
 
