--- a/Spring 2022/submissions_A1_S22/group6_5753_4327300_NDH802_Assignment1_6.Rmd
+++ b/Spring 2022/submissions_A1_S22/group6_5753_4327300_NDH802_Assignment1_6.Rmd
@@ -27,7 +27,7 @@ Set your working directory and fill in your group number. For example, if you ar
 
 ```{r}
 #setwd("")
-our_group <- 27
+our_group <- 6
 ```
 
 Run this code chunk to load data into your R Environment. The command will randomly select 1,000,000 rows of data from the original data set. Hereby each and every group should have a unique `df`. Accordingly, your results should be different from other groups' and you should not be comparing them.
@@ -75,11 +75,19 @@ set.seed(our_group); df <- inference_dataset[sample(1:nrow(inference_dataset),
 
 (a) Compute the `total.spend` of the customer (that includes `store.spend` and `online.spend`). Plot the histogram of `total.spend`. Imagine you will present this to your manager. Make it readable and self-explanatory (e.g., add the title for the chart and labels for the axes where needed). (1p) How do you explain the peak of the histogram, in general and in this context? (1p)
 
-    Answer:
-
     ```{r}
-    hist()
+    total.spend = df$online.spend + df$store.spend
     ```
+
+```{r}
+total.spend=df$total.spend
+
+summary(total.spend)
+
+hist(total.spend, xlim=c(0,350000), ylim=c(0, 70000), col="#0b86aa", main="Total spend (online spend + store spend)", xlab= "Total spend", ylab = "Number of customers", breaks = 70)
+```
+
+The information in the histogram tells us that the majority of the customers are spending around 20 000- 60 000 and that the most common spend is around 30 000-50 000. However, we can also see that people spend as little as 2660 to as much as around 320 000.
 
 (b) Make a box plot for `total.spend` for 3 groups, customers whose main format is supermarket, convenience store and online. Refer to the code provided and modify it (1p). From this figure, would you conclude that online is the format that contributes the most to the `total.spend`? Why/why not? (1p)
 
@@ -89,29 +97,112 @@ set.seed(our_group); df <- inference_dataset[sample(1:nrow(inference_dataset),
 #   data = your_df,
 #   ylim = c(-10, 100) # adjust the ylim that better illustrates your data
 # )
+boxplot(data = df, total.spend ~ main.format, main = "Boxplot", ylab = "Total spend", xlab = "Main format",  ylim = c(0, 350000)) 
+options(scipen = 999)
 ```
 
+I would argue that their statement that online is the format that contributes the most to the total spend is true since the box plots clearly shows us that the total spend is higher for those who mainly buy products online. However we do not know yet how big part of their total revenue is generated from online sales. We can also see that there is few convenience store customers spending approximately as much as the ones spending the most of the online customers.
+
 (c) Compute the mean and variance of `distance.to.store` of the customers whose `main.format` is supermarket and of the customers whose `main.format` is convenient store (1p). Comment on the difference between the means of the two groups; and the difference between the variances of the two groups (1p).
+
+```{r}
+#Mean
+mean(df[df$main.format == "Supermarket","distance.to.store"])
+mean(df[df$main.format == "Convenience store","distance.to.store"])
+
+#Variance
+var(df[df$main.format == "Supermarket","distance.to.store"])
+var(df[df$main.format == "Convenience store","distance.to.store"])
+```
+
+We can see that the customers who has supermarkets as main format has an higher mean in terms of distance to store compared with the ones who mainly go to convenient stores. We can also see that the variance is greater for supermarket customers which means that the customers who visit the supermarket store are from more spread out places compared with the convenient stores where more local customers visit. The customers who visit the convenient store both has a short mean in terms of distance to store and a low variance. It translates into that they normally live close to the convenient store itself and does not travel a long distance to get to the store.
 
 ### Question 2. Probability theory
 
 Consider the following events:
 
-> (A) Made at least one offline transaction
+> (A) Made at least one offline transaction: P(offline sale) / N
 >
-> (B) Made at least one online transaction
+> (B) Made at least one online transaction: P(Online sale) / N
 
 (a) Compute $P(A)$ and $P(B)$. (1p)
 
+    ```{r}
+    N = nrow(df) #count the number of all rows
+    N_A = nrow(df[df$store.trans > 0,])
+    N_B = nrow(df[df$online.trans > 0, ])
+    ```
+
+    ```{r}
+    P_A = N_A/N #Says that everyone has done a offline purschase
+    P_B = N_B/N  #Says that 96% has done a online transaction
+    ```
+
 (b) What is the complement of $B$? Formally, define event $\bar{B}$ and compute $P(\bar{B})$. (1p)
+
+    The complement of B is everyone who has not done a single online transaction, it can also be described as **1-P(B)** which is the complement to B. It is 1- P(B) since everyone who is a part o B has done at least one online transaction so by removing B from all of the customers, we get those who has not made an online sale.
+
+    ```{r}
+    1- P_B #Says that 4% has not done an online transaction
+
+    ```
 
 (c) Compute $P(B \cap A)$ and $P(B \mid A)$. (1p)
 
+    **P(B intersect A) = N( B intersect A) / N**
+
+    ```{r}
+    N_B_intersect_A = sum(df$store.trans > 0 & df$online.trans > 0, na.rm = TRUE)
+    P_B_intersect_A = N_B_intersect_A/N
+    ```
+
+    **P(B I A) = P(B intersect A) / P(A)**
+
+    ```{r}
+    P_B_intersect_A / P_A # Same as P(B)
+    ```
+
 (d) Are $A$ and $B$ independent events? Why/why not? (1p)
 
+    ![](images/paste-9F21844A.png)
+
+    **P(A intersect B) = P(A) \* P(B)**
+
+    Two events are independent if the condition above is satisfied. We can see below that they are equal which means that the two events are statistically independent. It shows us that the occurance of one event does not affect the chance of occurance of the other event.
+
+    ```{r}
+    #The left side of the equation
+    Leftside = P_B_intersect_A
+
+    #The right side of the equation
+    Rightside = P_A * P_B
+
+    #//* leftside = Rightside *//
+    ```
+
 (e) Compare and explain (with formula) the similarities/differences among $P(B)$, $P(B \cap A)$ and $P(B \mid A)$ (2p).
+
+    **P(B) = N(B) / N**
+
+    **P(B intersect A) = P(A) \* P(B) = 1 \* P(B) = P(B) = N(B) / N**
+
+    (since they are statistically independent we can transform P(B intersect A) to P(A) \* P(B))
+
+    **P(B I A) = P(B intersect A) / P(A) = ( P(A) \* P(B) ) / P(A) = P(B) = N(B) / N**
+
+    We can see from the result above that all of the probabilities are equal to each others in this case where the two events are statistically independent and one of the events probability is equal to 1, in other words collectively exhaustive. The whole B would be within A in a venn diagram since A is collectively exhaustive which is the reason to i.e., why P(B) is the same as P(B intersect A).
 
 \vfill
 
 *Have fun and good luck!*\
 *Huong and Emelie*
+
+Good job!
+
+Q1a. The plot is nice. Your have not really commented on the peak. 1.5p
+
+Q1b. The plot is nice. Your answer to the second sub-question is not entirely correct though you touch upon some correct points. 1.5p
+
+Q1c. Nicely reasoned. 2p
+
+Q2. PERFECT! 6p
